# ambigviz

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: cli.rs  main.rs
src/commands/: ambig.rs  depth.rs  mod.rs  utils.rs
test-data/: ambig.bam  ambig.bam.bai  ambig.sam
